# python_koans

./: pyproject.toml
koans/: about_comprehension.py  about_control_statements.py  about_dice_project.py  about_exceptions.py  about_iteration.py  about_methods.py  about_monkey_patching.py  about_scoring_project.py  about_sets.py  about_strings.py  about_tuples.py  about_with_statements.py  triangle.py
